--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -18,7 +18,7 @@
 				<div class="hbtn h2c site-demo-button">
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete1">闭环处理</button>
 				</div>
-			
+				<div id="coordinate_tree"></div>
 				
 				<div class="layui-colla-content layui-show" >
 				
@@ -215,6 +215,8 @@
 	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/tree_util.js"></script>
+	<script type="text/javascript" src="../js/global.js"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
 	<script type="text/javascript" src="../js/acceptance.js"></script>
 </body>
