--- a/src/main/resources/static/html/assign-task.html
+++ b/src/main/resources/static/html/assign-task.html
@@ -179,9 +179,11 @@
 
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="../js/url_param.js"></script>
+	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script src="../jsPackage/own/universal.js"></script>
+	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../js/global.js"></script>
 	<script type="text/javascript" src="../js/estimate_1.js"></script>
 	<script type="text/javascript" src="../js/assign-task.js"></script>
 </body>
