--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -204,9 +204,10 @@
 
 	</div>
 	<script type="text/javascript" src="../jsPackage/js/jquery-1.9.1.min.js"></script>
-	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
+	<script type="text/javascript" src="../jsPackage/js/jquery.cookie.js"></script>
 	<script src="../jsPackage/own/universal.js"></script>
 	<script type="text/javascript" src="../js/url_param.js"></script>
+	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/receive-task.js"></script>
 	<script type="text/javascript" src="../js/finish-task.js"></script>
 </body>
